[package]
name = "scroll-buffer"
version = "0.1.0"
edition = "2021"
authors = ["Nick Clifford <nick@nickclifford.me>"]
repository = "https://github.com/nickbclifford/scroll-buffer"
keywords = ["scroll", "pwrite", "dynamic", "buffer", "expand"]
license = "MIT"
description = "Extra writable buffers for Scroll"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scroll = "0.11.0"

[dev-dependencies]
doc-comment = "0.3.3"
